--- a/css/style.css
+++ b/css/style.css
@@ -10,15 +10,6 @@ body{
 
 /* common */
 
-.banner{
-    text-decoration: none;
-    color: white;
-    background: blue;
-    display: inline;
-    padding: 10px;
-    text-align: center;
-}
-
 .banner1{
     text-decoration: none;
     color: white;
@@ -64,7 +55,6 @@ body{
     display: table;
   }
 
-
 .background-w-100{
     background-color: #B4D0E7;
     width: 100%;
@@ -78,19 +68,17 @@ footer hr{
     width: 30%;
     margin: 10px 0;
 }
-/* fine common */
 
+/* fine common */
 
 header nav{
     width: 100%;
     height: 80px;
     background-color: white;
     max-width: 1980px;
-    margin: 0 auto;
 }
 
 header nav div{
-    height: 100%;
     line-height: 80px;
     text-align: center;
 }
@@ -105,28 +93,16 @@ header .nav-right{
     float: right;
 }
 
-header .nav-left #logo{
-    display: inline-block;
-}
-
 header .nav-left #logo img{
     vertical-align: middle;
     margin-bottom: 7px;
 }
 
-header nav div ul {
-    list-style: none;
-    height: 100%;
- }
- 
 header nav div ul li {
     display: inline-block;
-    text-decoration: none;
-    height: 100%;
- }
+}
  
 header nav div ul li a {
-    display: inline-block;
     text-decoration: none;
     padding: 0 20px;
     color: black;
@@ -143,7 +119,6 @@ main #first-section{
 main #first-section h1{
     padding: 30px 0;
     font-size: 6em;
-    font-weight: 900;
     margin-bottom: 50px;
  }
 
@@ -155,8 +130,6 @@ main #first-section .text-jumbo{
 main #first-section .text-left{
     width: 30%;
     display: inline-block;
-    top: 0;
-    left: 0;
 }
 
 main #first-section .text-left p{
@@ -175,9 +148,6 @@ main #first-section .text-left i{
 main #first-section .jumbotron{
     display: inline;
     position: absolute;
-    padding-right: 60px;
-    top: 0;
-    width: 70%;
 }
 
 main #first-section .jumbotron img{
@@ -186,12 +156,11 @@ main #first-section .jumbotron img{
 }
 
 main #second-section{
-    margin-top: 200px;
+    margin-top: 250px;
 }
 
 main #second-section .type-billing h2{
     font-size: 3em;
-    height: 50px;
 }
 
 main #second-section .type-billing div{
@@ -203,7 +172,6 @@ main #second-section .type-billing span{
 }
 
 main #second-section .col{
-    display: inline;
     float: left;
     border: 1px solid black;
     width: calc(100% / 3 - 67px);
@@ -214,7 +182,6 @@ main #second-section .col .type-abb,
 main #second-section .col-button .type-abb{
     text-align: center;
     border-bottom: 1px solid black;
-    vertical-align: middle;
     padding: 10px;  
 }
 
@@ -247,16 +214,16 @@ main #second-section .col-button{
     position: relative;
 }
 
-main #second-section .col-button h2:not(.banner, .type-abb){
+main #second-section .col-button h2:not(.banner1, .type-abb){
     padding: 0 10px;
 }
 
-main #second-section .col-button h4:not(.banner, .type-abb),
-main #second-section .col-button div:not(.banner, .type-abb){
+main #second-section .col-button h4:not(.banner1, .type-abb),
+main #second-section .col-button div:not(.banner1, .type-abb){
     padding: 10px;
 }
 
-main #second-section .col-button .banner{
+main #second-section .col-button .banner1{
     position: absolute;
     top: 70px;
     right: 30px;
@@ -284,7 +251,6 @@ main #third-section .box-img img{
 main #third-section .box-text h2:not(.banner2),
 main #third-section .box-text p:not(.banner2),
 main #third-section .box-text div:not(.banner2){
-    width: 100%;
     padding: 20px 0 20px 40px;
     line-height: 25px;
 }
@@ -292,7 +258,6 @@ main #third-section .box-text div:not(.banner2){
 main #fourth-section #size-second-title{
     font-size: 3em;
     margin-top: 130px;
-    padding: 20px 0;
 }
 
 main #fourth-section .content-box{
@@ -319,12 +284,12 @@ main #fifth-section{
     margin-top: 150px;
 }
 
-main #fifth-section .row-text .w-70 h2{
+main #fifth-section .w-70 h2{
     line-height: 60px;
     font-size: 3em;
 }
 
-main #fifth-section .row-text .w-70 a{
+main #fifth-section .w-70 a{
     display: inline-block;
     padding: 40px 0 60px 0;
 }
@@ -373,7 +338,6 @@ main #fifth-section .square{
     height: 15vw;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: contain;
     background-size: 60%;
     filter:invert(1);
 }
@@ -447,7 +411,7 @@ main #sixth-section{
     margin-bottom: 100px;
 }
 
-main #sixth-section div div,
+main #sixth-section div,
 main #sixth-section h2{
     padding: 40px 0;
     font-weight: bold;
@@ -456,7 +420,6 @@ main #sixth-section h2{
 main #sixth-section div i{
     margin-left: 650px;
     font-size: 1.5em;
-    display: inline;
     vertical-align: middle;
 }
 
@@ -467,7 +430,7 @@ footer{
 footer .footer-top .col-footer{
     float: left;
     color: white;
-    width: calc(100% / 5 - 80px);
+    width: calc(100% / 5 - 60px);
     margin: 80px 60px 80px 0;
  }
 
